# Social-Gaming-Platform

web-socket-networking/lib/gamestuff/: CMakeLists.txt
web-socket-networking/lib/gamestuff/Config/: Config.cpp
web-socket-networking/lib/gamestuff/Config/include/: Config.h
web-socket-networking/lib/gamestuff/Config/test/: CMakeLists.txt  Config.cpp  ConfigTest.cpp
web-socket-networking/lib/gamestuff/Config/test/ConfigTests/: CMakeLists.txt  ConfigTest.cpp  default.json  mingreatermax.json  wrongKey.json  wrongVal.json
web-socket-networking/lib/gamestuff/Constant/: Constant.cpp
web-socket-networking/lib/gamestuff/Constant/include/: Constant.h
web-socket-networking/lib/gamestuff/Constant/test/: CMakeLists.txt
web-socket-networking/lib/gamestuff/Data/: CMakeLists.txt  Data.cpp  DataType.cpp
web-socket-networking/lib/gamestuff/Data/include/: Data.h  DataType.h
web-socket-networking/lib/gamestuff/InputTest/: test.cpp
web-socket-networking/lib/gamestuff/Input_Choice_Test/: test.cpp
web-socket-networking/lib/gamestuff/ListOperations/: CMakeLists.txt  ListOperations.cpp  ListOps.cpp
web-socket-networking/lib/gamestuff/ListOperations/include/: ListOperations.h  ListOps.h
web-socket-networking/lib/gamestuff/ListOperations/test/: CMakeLists.txt
web-socket-networking/lib/gamestuff/RuleParser/: RuleParser.cpp
web-socket-networking/lib/gamestuff/Variables/include/: Variables.h
web-socket-networking/lib/gamestuff/include/: Arithmetic.h  Config.h  Constant.h  Data.h  Foreach.h  Game.h  GlobalMessages.h  InParallel.h  Input.h  InputRules.h  InputText.h  Input_choice.h  LocalMessages.h  Loop.h  Messages.h  Parallelfor.h  Parser.h  PerAudience.h  PerPlayer.h  Quiz.h  Rules.h  StringInterpreter.h  Switch.h  Timer.h  Variables.h  When.h  config.h  when.h
web-socket-networking/lib/gamestuff/src/: Arithmetic.cpp  Config.cpp  Constant.cpp  Data.cpp  Foreach.cpp  Game.cpp  GlobalMessages.cpp  InParallel.cpp  Input.cpp  InputRules.cpp  InputText.cpp  Input_choice.c  Input_choice.cpp  LocalMessages.cpp  Loop.cpp  Messages.cpp  Parallelfor.cpp  Parser.cpp  PerAudience.cpp  PerPlayer.cpp  Quiz.cpp  RuleParser.cpp  Rules.cpp  StringInterpreter.cpp  Switch.cpp  Timer.cpp  Variables.cpp  When.cpp  config.cpp  when.cpp
web-socket-networking/lib/gamestuff/src/arithmeticTest/: CMakeLists.txt
web-socket-networking/lib/gamestuff/src/tempTesting/: CMakeLists.txt  a.out  test.cpp
web-socket-networking/lib/gamestuff/tests/: tempConstantTest.cpp
web-socket-networking/lib/networking/commandHandler/src/: CMakeLists.txt  command_reader.cpp
(+45 files in other folders)
